--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port= 8081
 
-application.http.callout.api.openweather.baseurl = https://api.openweathermap.org/data/2.5/weather?mode=xml&APPID=07b9b4b3de072bbea91df88a84055318&q=
+application.http.callout.api.openweather.baseurl.apikeys = ${URL_APIKEY}
